# vedex

./: .gitignore  AGENTS.md  main.py  pyproject.toml  vedex.py
.vedex/sessions/: 20260602-110925-d8327f.json
src/: agent.py  main.py  model.py  session.py  workspace.py
src/agent/: __init__.py  chat.py  core.py  events.py  harness.py  loop.py  messages.py  models.py  session.py  tools.py  types.py
src/agent/session/: __init__.py  entries.py  jsonl.py  memory.py  storage.py  tree.py
src/ai/: __init__.py  env.py  events.py  fake.py  openai_compatible.py  provider.py  retry.py
src/coding/: cli.py  commands.py  context.py  context_window.py  credentials.py  diagnostics.py  paths.py  prompt_templates.py  provider_catalog.py  provider_config.py  provider_runtime.py  reload.py  rendering.py  resources.py  session.py  session_manager.py  shell.py  skills.py  system_prompt.py  thinking.py  tools.py
src/ollama/: __init__.py  chat.py  client.py  fake.py  models.py  openai_compatible.py  provider.py  retry.py  types.py
tests/: test_agent_types.py  test_ai.py  test_harness.py  test_loop.py  test_session.py
vedex/: cli.py  coding_session.py  commands.py  context.py  context_window.py  core.py  diagnostics.py  prompt_templates.py  rendering.py  resources.py  schema.py  session.py  session_manager.py  shell.py  skills.py  system_prompt.py  tools.py
