[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "vedex"
version = "0.1.0"
description = "An AI coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.14.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ollama", "src/agent", "src/coding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
